02_Virtual_Network.tf
resource "azurerm_virtual_network" "projectMain" {
	name = "{var.project}-network"
	address_space = ["10.0.0.0/16"]
	location = "${azurerm_resource_group.projectMain.location}"
	resource_group_name = "${azurerm_resource_group.projectMain.name}"
}
