04_Subnet.tf
resource "azurerm_subnet" "internal" {
	name = "internal"
	resource_group_name = "${azurerm_resource_group.main.name}"
	virtual_networkd_name = "${azurerm_virtual_network.main.name}"
	address_prefix = "10.0.2.0/24"
}
